# novastat_pharma-csp

./: .gitignore  README.md  _brand.yml  main.py  posit-README.md  pyproject.toml
R/: app.R  bridge.R  generate_data_fallback.R  train_model.R
python/: __init__.py  api.py  shap_utils.py  train_model.py
quarto/: validation_report.qmd
sas/: cdisc_validation.sas  create_adam.sas  generate_sdtm.sas
sas/tfl/: f_dropout_01.sas  t_ae_01.sas  t_dm_01.sas
